[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://materials/diagbox-normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://materials/stages.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/scrolling_background/scrolling_background.gd" type="Script" id=4]
[ext_resource path="res://assets/boost-bg.png" type="Texture" id=5]
[ext_resource path="res://assets/close.png" type="Texture" id=6]

[node name="Settings" type="Node"]
script = ExtResource( 1 )

[node name="ScrollingBackground" type="Node" parent="."]
script = ExtResource( 4 )
texture = ExtResource( 5 )
speed_x = 5.0
speed_y = 0
scale = 1
modulate = Color( 0.498039, 0.0431373, 1, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.0327384
anchor_top = 0.0370744
anchor_right = 0.966072
anchor_bottom = 0.957908
color = Color( 0.137255, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_left = 0.229
anchor_top = 0.2
anchor_right = 0.421
anchor_bottom = 0.7
margin_right = 118.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
margin_right = 84.0
margin_bottom = 140.0
alignment = 1

[node name="VoiceBloop" type="OptionButton" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Voice"
flat = true

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/VoiceBloop"]
margin_left = 120.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Voice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 42.0
value = 100.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/Music"]
margin_left = 120.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HSlider" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 84.0
margin_bottom = 62.0
value = 100.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/SFX"]
margin_left = 120.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Languange" type="OptionButton" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 84.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Language"
flat = true

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/Languange"]
margin_left = 120.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Button" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 84.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 2 )
text = "Debug Game"

[node name="Controls" type="Button" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 84.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "Controls"

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 21.888
margin_top = 13.4695
margin_right = 72.888
margin_bottom = 27.4695
custom_fonts/font = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="ColorRect/Label"]
margin_left = 270.0
margin_right = 292.0
margin_bottom = 22.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ColorRect/ScrollContainer/VBoxContainer/VoiceBloop" to="." method="_on_VoiceBloop_item_selected"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="item_selected" from="ColorRect/ScrollContainer/VBoxContainer/Languange" to="." method="_on_Languange_item_selected"]
[connection signal="pressed" from="ColorRect/ScrollContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="ColorRect/Label/Button" to="." method="_on_Button_pressed"]
