[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://materials/diagbox-normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://materials/stages.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/gui/ScrollingTextureRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://materials/theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/gui/close.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/reset.png" type="Texture" id=7]
[ext_resource path="res://sounds/music/settings_loop.ogg" type="AudioStream" id=8]

[node name="Settings" type="Node"]
script = ExtResource( 1 )

[node name="ScrollingTextureRect" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.568627, 0, 1, 1 )

[node name="ColorRect" type="Panel" parent="."]
anchor_left = 0.0327384
anchor_top = 0.0370744
anchor_right = 0.966072
anchor_bottom = 0.957908
margin_left = 0.428352
margin_top = 0.204288
margin_right = -335.572
margin_bottom = -220.796
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_left = 0.229
anchor_top = 0.2
anchor_right = 0.421
anchor_bottom = 0.7
margin_left = -35.944
margin_top = -8.19997
margin_right = 146.544
margin_bottom = 41.3001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
margin_right = 57.0
margin_bottom = 113.0
alignment = 1

[node name="VoiceBloop" type="CheckBox" parent="ColorRect/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 72.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "setVoice"
flat = true

[node name="Music" type="HSlider" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 15.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/Music"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_right = 128.0
custom_fonts/font = ExtResource( 2 )
text = "setBGM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/Music"]
visible = false
margin_left = 20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "75%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HSlider" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 57.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/SFX"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_right = 128.0
custom_fonts/font = ExtResource( 2 )
text = "setSFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/SFX"]
visible = false
margin_left = 20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "75%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="MenuButton" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 57.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "setLang"

[node name="Modman" type="MenuButton" parent="ColorRect/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 57.0
margin_bottom = 74.0
text = "setMod"

[node name="Scale" type="MenuButton" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 57.0
margin_bottom = 74.0
focus_mode = 2
text = "setXscale"

[node name="Controls" type="Button" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 57.0
margin_bottom = 94.0
hint_tooltip = "setTooltipCntrls"
custom_fonts/font = ExtResource( 2 )
text = "setCntrl"
flat = true

[node name="TextSpd" type="HSlider" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 57.0
margin_bottom = 113.0
max_value = 0.1
step = 0.001
value = 0.05

[node name="Label" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/TextSpd"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_right = 128.0
custom_fonts/font = ExtResource( 2 )
text = "setTxtSpd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percentage" type="Label" parent="ColorRect/ScrollContainer/VBoxContainer/TextSpd"]
margin_left = 22.0
margin_top = -1.0
margin_right = 62.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 22.0
margin_top = 13.0
margin_right = 78.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "menuSet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="ColorRect/Label"]
margin_left = 270.0
margin_right = 292.0
margin_bottom = 22.0
hint_tooltip = "setTooltipMenu"
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipLabel" type="Label" parent="ColorRect/Label"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 139.0
margin_top = 102.0
margin_right = 209.0
margin_bottom = 180.0
text = "setTip"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset_Set" type="TextureButton" parent="ColorRect/Label"]
margin_left = 270.0
margin_top = 170.0
margin_right = 292.0
margin_bottom = 192.0
hint_tooltip = "setTooltipReset"
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music-loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="toggled" from="ColorRect/ScrollContainer/VBoxContainer/VoiceBloop" to="." method="_on_VoiceBloop_toggled"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="ColorRect/ScrollContainer/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="ColorRect/ScrollContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="ColorRect/Label/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Label/Reset_Set" to="." method="_on_Reset_Set_pressed"]
